# ml-pipeline

./: .gitignore  Makefile  README.md  pipeline.py  pyproject.toml
config/: config.yaml
deployment/: Dockerfile  compare.pkl  compare.py
ml_pipeline/: __init__.py  deploy.py  exploration.py  inference.py  preprocess.py  train.py  validate.py
output/: experiment.pkl  explainer.yaml  exploration_processed.html  exploration_raw.html  predict.csv
