[tool.poetry]
name = "ml-pipeline"
version = "0.1.0"
description = ""
authors = ["jakechinmk <mkchin.jake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pycaret = {extras = ["analysis"], version = "^3.2.0"}
mlflow = "^2.9.2"
kaleido = "0.2.1"
sweetviz = "^2.3.1"
ipykernel = "^6.28.0"
werkzeug = "2.2.2"
dash = "2.6.2"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
